force-app/main/default/objects/WarningSettings__c/WarningSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Warning Settings</label>
</CustomObject>