force-app/main/default/objects/WarningSettings__c/fields/CardsByScreenLarge__c.field-meta.xml
<CustomField>
    <fullName>CardsByScreenLarge__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be displayed at once on a large screen? Ex: Desktops. The recommendation is 9.</inlineHelpText>
    <label>Cards By Screen (Large)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>