force-app/main/default/objects/WarningSettings__c/fields/CardsByScreenMedium__c.field-meta.xml
<CustomField>
    <fullName>CardsByScreenMedium__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be displayed at once on a medium screen? Ex: Tablets. The recommendation is 6.</inlineHelpText>
    <label>Cards By Screen (Medium)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>