force-app/main/default/objects/WarningSettings__c/fields/CardsByScreenSmall__c.field-meta.xml
<CustomField>
    <fullName>CardsByScreenSmall__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be displayed at once on a small screen? Ex: Smartphones. The recommendation is 3.</inlineHelpText>
    <label>Cards By Screen (Small)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>