force-app/main/default/objects/WarningSettings__c/fields/WarningsByRowLarge__c.field-meta.xml
<CustomField>
    <fullName>WarningsByRowLarge__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be displayed for each row on a large screen? Ex: Desktops. The recommendation is 3.</inlineHelpText>
    <label>Warnings By Row (Large)</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>