force-app/main/default/objects/WarningSettings__c/fields/WarningsByRowMedium__c.field-meta.xml
<CustomField>
    <fullName>WarningsByRowMedium__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be displayed for each row on a medium screen? Ex: Tablets. The recommendation is 2.</inlineHelpText>
    <label>Warnings By Row (Medium)</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>