force-app/main/default/objects/WarningSettings__c/fields/WarningsByRowSmall__c.field-meta.xml
<CustomField>
    <fullName>WarningsByRowSmall__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be displayed for each row on a medium screen? Ex: Smartphones. The recommendation is 1.</inlineHelpText>
    <label>Warnings By Row (Small)</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>