force-app/main/default/objects/WarningSettings__c/fields/WarningsLoadMoreLarge__c.field-meta.xml
<CustomField>
    <fullName>WarningsLoadMoreLarge__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be loaded when the user clicks on the button &quot;Load More Warnings&quot; on a large screen? Ex: Desktops. The recommendation is 9.</inlineHelpText>
    <label>Warnings to Load More (Large)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>