force-app/main/default/objects/WarningSettings__c/fields/WarningsLoadMoreMedium__c.field-meta.xml
<CustomField>
    <fullName>WarningsLoadMoreMedium__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be loaded when the user clicks on the button &quot;Load More Warnings&quot; on a medium screen? Ex: Tablets. The recommendation is 6.</inlineHelpText>
    <label>Warnings to Load More (Medium)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>