force-app/main/default/objects/WarningSettings__c/fields/WarningsLoadMoreSmall__c.field-meta.xml
<CustomField>
    <fullName>WarningsLoadMoreSmall__c</fullName>
    <description>Warning News Tab</description>
    <inlineHelpText>How many cards will be loaded when the user clicks on the button &quot;Load More Warnings&quot; on a small screen? Ex: Smartphones. The recommendation is 3.</inlineHelpText>
    <label>Warnings to Load More (Small)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>